tdf#154113: do not forget to split the outermost section frame

... when the inserted section node is not the first one.

The very first frame, where InsertCnt_ puts content to, may already have
some content after the insertion position. When an inner section ends,
the current section needs a new frame, and the rest of content must go
to that new frame. Previously, the new empty frame was created without
taking the content move into account.

This moves the split into the single place inside InsertCnt_, to avoid
special processing in MakeFrames.

Change-Id: I1335ebbc620af0f2b064141e8267e5bd1af0b195
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150675
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150740
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>