sw/source/core/layout/sectfrm.cxx
@@ -511,50 +511,53 @@ void SwSectionFrame::MergeNext( SwSectionFrame* pNxt )
 }
 
 /**
-|*  Divides a SectionFrame into two parts. The second one starts with the
-|*  passed frame.
+|*  Divides a SectionFrame into two parts. The content of the second one
+|*  starts after pFrameStartAfter; the created second section frame itself
+|*  is put after pFramePutAfter.
+|*  If pFrameStartAfter is nullptr, the split happens at the start.
 |*  This is required when inserting an inner section, because the MoveFwd
 |*  cannot have the desired effect within a frame or a table cell.
+|*  Splitting at the start/end makes sense, because the empty frame would
+|*  be removed after the InsertCnt_ finished.
 |*/
-bool SwSectionFrame::SplitSect( SwFrame* pFrame, bool bAfter )
+SwSectionFrame* SwSectionFrame::SplitSect( SwFrame* pFrameStartAfter, SwFrame* pFramePutAfter )
 {
-    assert(pFrame && "SplitSect: Why?");
-    SwFrame* pOther = bAfter ? pFrame->FindNext() : pFrame->FindPrev();
-    if( !pOther )
-        return false;
-    SwSectionFrame* pSect = pOther->FindSctFrame();
-    if( pSect != this )
-        return false;
+    assert(!pFrameStartAfter || pFrameStartAfter->FindSctFrame() == this);
+    SwFrame* pSav = pFrameStartAfter ? pFrameStartAfter->FindNext() : ContainsAny();
+    if (pSav && pSav->FindSctFrame() != this)
+        pSav = nullptr; // we are at the very end
+
     // Put the content aside
-    SwFrame* pSav = ::SaveContent( this, bAfter ? pOther : pFrame );
-    OSL_ENSURE( pSav, "SplitSect: What's on?" );
-    if( pSav ) // be robust
-    {   // Create a new SctFrame, not as a Follower/master
-        SwSectionFrame* pNew = new SwSectionFrame( *pSect->GetSection(), pSect );
-        pNew->InsertBehind( pSect->GetUpper(), pSect );
-        pNew->Init();
-        SwRectFnSet aRectFnSet(this);
-        aRectFnSet.MakePos( *pNew, nullptr, pSect, true );
-        // OD 25.03.2003 #108339# - restore content:
-        // determine layout frame for restoring content after the initialization
-        // of the section frame. In the section initialization the columns are
-        // created.
-        {
-            SwLayoutFrame* pLay = pNew;
-            // Search for last layout frame, e.g. for columned sections.
-            while( pLay->Lower() && pLay->Lower()->IsLayoutFrame() )
-                pLay = static_cast<SwLayoutFrame*>(pLay->Lower());
-            ::RestoreContent( pSav, pLay, nullptr );
-        }
-        InvalidateSize_();
-        if( HasFollow() )
-        {
-            pNew->SetFollow( GetFollow() );
-            SetFollow( nullptr );
-        }
-        return true;
+    if (pSav)
+        pSav = ::SaveContent( this, pSav );
+
+    // Create a new SctFrame, not as a Follower/master
+    if (!pFramePutAfter)
+        pFramePutAfter = this;
+    SwSectionFrame* pNew = new SwSectionFrame( *GetSection(), this );
+    pNew->InsertBehind( pFramePutAfter->GetUpper(), pFramePutAfter );
+    pNew->Init();
+    SwRectFnSet aRectFnSet(this);
+    aRectFnSet.MakePos( *pNew, nullptr, pFramePutAfter, true );
+    // OD 25.03.2003 #108339# - restore content:
+    // determine layout frame for restoring content after the initialization
+    // of the section frame. In the section initialization the columns are
+    // created.
+    if (pSav)
+    {
+        SwLayoutFrame* pLay = pNew;
+        // Search for last layout frame, e.g. for columned sections.
+        while( pLay->Lower() && pLay->Lower()->IsLayoutFrame() )
+            pLay = static_cast<SwLayoutFrame*>(pLay->Lower());
+        ::RestoreContent( pSav, pLay, nullptr );
     }
-    return false;
+    InvalidateSize_();
+    if( HasFollow() )
+    {
+        pNew->SetFollow( GetFollow() );
+        SetFollow( nullptr );
+    }
+    return pNew;
 }
 
 /**
