sw/qa/extras/layout/layout2.cxx
@@ -19,6 +19,7 @@
 #include <i18nlangtag/languagetag.hxx>
 #include <editeng/unolingu.hxx>
 #include <svx/svdobj.hxx>
+#include <vcl/scheduler.hxx>
 
 #include <unotxdoc.hxx>
 #include <rootfrm.hxx>
@@ -1771,6 +1772,47 @@ CPPUNIT_TEST_FIXTURE(SwLayoutWriter2, testUserFieldTypeLanguage)
     // We expect, that the field value is not changed. Otherwise there is a problem:
     assertXPath(pXmlDoc, "/root/page/body/txt/Special[@nType='PortionType::Field']", "rText",
                 "1,234.56");
+}
+
+CPPUNIT_TEST_FIXTURE(SwLayoutWriter2, testTdf154113)
+{
+    createSwDoc(DATA_DIRECTORY, "three_sections.fodt");
+    Scheduler::ProcessEventsToIdle();
+
+    dispatchCommand(mxComponent, ".uno:GoToStartOfDoc", {});
+    dispatchCommand(mxComponent, ".uno:GoToNextPara", {});
+    dispatchCommand(mxComponent, ".uno:EndOfDocumentSel", {}); // to the end of current section!
+    dispatchCommand(mxComponent, ".uno:EndOfDocumentSel", {}); // to the end of the document.
+
+    uno::Reference<frame::XModel> xModel(mxComponent, uno::UNO_QUERY_THROW);
+    uno::Reference<container::XIndexAccess> xSelected(xModel->getCurrentSelection(),
+                                                      uno::UNO_QUERY_THROW);
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1), xSelected->getCount());
+    uno::Reference<text::XTextRange> xRange(xSelected->getByIndex(0), uno::UNO_QUERY_THROW);
+    CPPUNIT_ASSERT_EQUAL(OUString("<-- Start selection here. Section1" SAL_NEWLINE_STRING
+                                  "Section2" SAL_NEWLINE_STRING "Section3. End selection here -->"),
+                         xRange->getString());
+
+    dispatchCommand(mxComponent, ".uno:Cut", {});
+
+    xSelected.set(xModel->getCurrentSelection(), uno::UNO_QUERY_THROW);
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1), xSelected->getCount());
+    xRange.set(xSelected->getByIndex(0), uno::UNO_QUERY_THROW);
+    CPPUNIT_ASSERT_EQUAL(OUString(), xRange->getString());
+
+    dispatchCommand(mxComponent, ".uno:Paste", {});
+
+    xmlDocUniquePtr pXml = parseLayoutDump();
+
+    // Without the fix in place, this would fail with
+    // - Expected: 3
+    // - Actual  : 2
+    assertXPath(pXml, "/root/page/body/section", 3);
+    assertXPath(pXml, "/root/page/body/section[1]/txt/Text", "Portion",
+                "<-- Start selection here. Section1");
+    assertXPath(pXml, "/root/page/body/section[2]/txt/Text", "Portion", "Section2");
+    assertXPath(pXml, "/root/page/body/section[3]/txt/Text", "Portion",
+                "Section3. End selection here -->");
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
