sw/qa/extras/layout/layout3.cxx
@@ -1602,6 +1602,47 @@ CPPUNIT_TEST_FIXTURE(SwLayoutWriter3, testTdf138124)
     assertXPath(pXml, "/root/page/ftncont/ftn/txt//SwLinePortion[@type='PortionType::FlyCnt']", 1);
 }
 
+CPPUNIT_TEST_FIXTURE(SwLayoutWriter3, testTdf154113)
+{
+    createSwDoc("three_sections.fodt");
+    Scheduler::ProcessEventsToIdle();
+
+    dispatchCommand(mxComponent, ".uno:GoToStartOfDoc", {});
+    dispatchCommand(mxComponent, ".uno:GoToNextPara", {});
+    dispatchCommand(mxComponent, ".uno:EndOfDocumentSel", {}); // to the end of current section!
+    dispatchCommand(mxComponent, ".uno:EndOfDocumentSel", {}); // to the end of the document.
+
+    auto xModel = mxComponent.queryThrow<frame::XModel>();
+    auto xSelected = xModel->getCurrentSelection().queryThrow<container::XIndexAccess>();
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1), xSelected->getCount());
+    auto xRange = xSelected->getByIndex(0).queryThrow<text::XTextRange>();
+    CPPUNIT_ASSERT_EQUAL(OUString("<-- Start selection here. Section1" SAL_NEWLINE_STRING
+                                  "Section2" SAL_NEWLINE_STRING "Section3. End selection here -->"),
+                         xRange->getString());
+
+    dispatchCommand(mxComponent, ".uno:Cut", {});
+
+    xSelected = xModel->getCurrentSelection().queryThrow<container::XIndexAccess>();
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1), xSelected->getCount());
+    xRange = xSelected->getByIndex(0).queryThrow<text::XTextRange>();
+    CPPUNIT_ASSERT_EQUAL(OUString(), xRange->getString());
+
+    dispatchCommand(mxComponent, ".uno:Paste", {});
+
+    xmlDocUniquePtr pXml = parseLayoutDump();
+
+    // Without the fix in place, this would fail with
+    // - Expected: 3
+    // - Actual  : 2
+    assertXPath(pXml, "/root/page/body/section", 3);
+    assertXPath(pXml, "/root/page/body/section[1]/txt/SwParaPortion/SwLineLayout", "portion",
+                "<-- Start selection here. Section1");
+    assertXPath(pXml, "/root/page/body/section[2]/txt/SwParaPortion/SwLineLayout", "portion",
+                "Section2");
+    assertXPath(pXml, "/root/page/body/section[3]/txt/SwParaPortion/SwLineLayout", "portion",
+                "Section3. End selection here -->");
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
